# vspice

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  TODO.md  ai_3d_demo.py  inductor_coil_footprint.py  main.cpp  package-lock.json  spice_models.lib  test_callback_verify.py  test_p2_comprehensive.py  test_phase2_resistor.py  test_switch_toggle.py  ui_ux_improvements.md  untitled.flxsch
core/: CMakeLists.txt  assignment_validator.cpp  assignment_validator.h  bom_manager.cpp  bom_manager.h  config_manager.cpp  config_manager.h  eco_types.h  flux_python.cpp  flux_python.h  flux_python_bindings.cpp  jit_context_manager.cpp  jit_context_manager.h  library_index.cpp  library_index.h  net_class.cpp  net_class.h  pcb_sync_dialog.cpp  pcb_sync_dialog.h  project.cpp  project.h  recent_projects.cpp  recent_projects.h  settings_dialog.cpp  settings_dialog.h  si_axis.h  si_axis_formatter.h  si_formatter.h  simulation_manager.cpp  simulation_manager.h  sync_engine.h  sync_manager.h  text_resolver.h  theme.cpp  theme.h  theme_manager.cpp  theme_manager.h  ws_server.cpp  ws_server.h
core/diagnostics/: debugger.cpp  debugger.h  runtime_diagnostics.h
core/interfaces/: idocument_io.h  ieditor.h  ipcb_io_bridge.h  iplugin.h  ischematic_io_bridge.h  itool.h  plugin_sdk_version.h
core/plugins/: pcb_plugin.h  plugin_catalog_client.cpp  plugin_catalog_client.h  plugin_manager.cpp  plugin_manager.h  plugin_package_installer.cpp  plugin_package_installer.h
core/ui/: color_button.cpp  color_button.h  command_palette.cpp  command_palette.h  project_audit_dialog.cpp  project_audit_dialog.h  selection_filter_widget.cpp  selection_filter_widget.h  text_properties_dialog.cpp  text_properties_dialog.h
footprints/: CMakeLists.txt  footprint_commands.cpp  footprint_commands.h  footprint_editor.cpp  footprint_editor.h  footprint_library.cpp  footprint_library.h  footprint_wizard.cpp  footprint_wizard.h  kicad_footprint_importer.cpp  kicad_footprint_importer.h
footprints/analysis/: footprint_engine.cpp  footprint_engine.h
footprints/items/: footprint_primitive_item.cpp  footprint_primitive_item.h
footprints/models/: footprint_definition.cpp  footprint_definition.h  footprint_primitive.cpp  footprint_primitive.h
footprints/ui/: footprint_editor_view.cpp  footprint_editor_view.h  footprint_wizard_dialog.cpp  footprint_wizard_dialog.h
pcb/: CMakeLists.txt
pcb/analysis/: connectivity_engine.h  design_report_generator.cpp  design_report_generator.h  drc_engine.h  length_match_manager.cpp  length_match_manager.h  length_measurement_engine.cpp  length_measurement_engine.h  pcb_diff_engine.cpp  pcb_diff_engine.h  pcb_ratsnest_manager.cpp  pcb_ratsnest_manager.h  serpentine_generator.cpp  serpentine_generator.h  signal_integrity_engine.cpp  signal_integrity_engine.h
pcb/dialogs/: board_setup_dialog.cpp  board_setup_dialog.h  design_report_dialog.cpp  design_report_dialog.h  fanout_wizard_dialog.cpp  footprint_browser_dialog.cpp  gerber_export_dialog.cpp  gerber_export_dialog.h  length_matching_dialog.cpp  length_matching_dialog.h  netlist_import_dialog.cpp  pcb_diff_viewer.cpp  pcb_diff_viewer.h  via_stitching_dialog.cpp  via_stitching_dialog.h
pcb/drc/: pcb_design_rules_editor.cpp  pcb_design_rules_editor.h  pcb_drc.cpp  pcb_drc.h  pcb_drc_panel.cpp  pcb_drc_panel.h
pcb/editor/: mainwindow.cpp  mainwindow.cpp_onPropertyChanged.txt  mainwindow.cpp_temp  mainwindow.h  mainwindow.ui  pcb_api.cpp  pcb_api.h  pcb_commands.cpp  pcb_commands.h  pcb_sync_dialog.cpp  pcb_view.cpp  pcb_view.h
pcb/factories/: pcb_item_factory.cpp  pcb_item_factory.h  pcb_item_registry.cpp  pcb_item_registry.h
pcb/gerber/: gerber_3d_view.cpp  gerber_3d_view.h  gerber_exporter.cpp  gerber_exporter.h  gerber_layer.h  gerber_parser.cpp  gerber_parser.h  gerber_view.cpp  gerber_view.h  gerber_viewer_window.cpp  gerber_viewer_window.h
pcb/import/: netlist_importer.cpp  netlist_importer.h
pcb/io/: pcb_file_io.cpp  pcb_file_io.h
pcb/items/: component_item.cpp  component_item.h  copper_pour_item.cpp  copper_pour_item.h  pad_item.cpp  pad_item.h  pcb_item.cpp  pcb_item.h  ratsnest_item.h  trace_item.cpp  trace_item.h  via_item.cpp  via_item.h
pcb/layers/: pcb_layer.cpp  pcb_layer.h  pcb_layer_panel.cpp  pcb_layer_panel.h
pcb/manufacturing/: manufacturing_exporter.cpp  manufacturing_exporter.h
pcb/mcad/: mcad_exporter.cpp  mcad_exporter.h
pcb/models/: board_model.h  component_model.h  copper_pour_model.h  drc_types.cpp  drc_types.h  length_match_types.h  pad_model.h  trace_model.h  via_model.h
pcb/plugins/: pcb_plugin.h  pcb_plugin_manager.cpp  pcb_plugin_manager.h
pcb/tools/: pcb_component_tool.cpp  pcb_component_tool.h  (+28 more)
python/: CMakeLists.txt  gemini_bridge.cpp  gemini_bridge.h  gemini_dialog.cpp  gemini_dialog.h  gemini_instructions_dialog.cpp  gemini_panel.cpp  gemini_panel.h  python_manager.cpp  python_manager.h  requirements.txt
schematic/: CMakeLists.txt  schematic_primitives.cpp  schematic_primitives.h
simulator/: ARCHITECTURE.md  BETA_READINESS_CHECKLIST.md  CMakeLists.txt  ROADMAP.md  TROUBLESHOOTING.md  component-model-mapping.md  features-to-add.md  hierarchical-flattening.md  pin-order-normalization.md
ui/: CMakeLists.txt  analysis_dialog.cpp  analysis_dialog.h  branch_comparison_dialog.cpp  branch_comparison_dialog.h  calculator_dialog.cpp  calculator_dialog.h  csv_viewer.cpp  csv_viewer.h  developer_help_window.cpp  developer_help_window.h  fft_analyzer.cpp  fft_analyzer.h  git_backend.cpp  git_backend.h  help_window.cpp  help_window.h  measurement_dialog.cpp  measurement_dialog.h  plugin_manager_dialog.cpp  plugin_manager_dialog.h  project_explorer_widget.cpp  project_explorer_widget.h  project_manager.cpp  project_manager.h  property_editor.cpp  property_editor.h  python_console_widget.cpp  python_executor.cpp  quick_open_dialog.cpp  quick_open_dialog.h  schematic_timeline_view.cpp  schematic_timeline_view.h  shortcuts_dialog.cpp  source_control_manager.cpp  source_control_manager.h  source_control_panel.cpp  source_control_panel.h  spice_model_architect.cpp  spice_model_architect.h  (+7 more)
(+572 files in other folders)
